fix front page alignments

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -52,7 +52,8 @@ body {
     font-family: $font-family-cabin;
     font-family: var(--font-family-cabin);
     letter-spacing: .03em;
-    background: $e5;
+    background: $white;
+    display: flex;
 }
 
 .main {
